fix(ci): add missing fontconfig dependency

--- a/.github/workflows/concrete_optimizer.yml
+++ b/.github/workflows/concrete_optimizer.yml
@@ -42,6 +42,11 @@ jobs:
           cargo --version
           cd compilers/concrete-optimizer
           cargo fmt --check
+      - name: Fix fontconfig on ubuntu
+        if: ${{ matrix.runson == 'ubuntu-latest' }}
+        run: |
+          sudo apt update
+          sudo apt -y install libfontconfig1-dev
       - name: Build
         run: |
           cd compilers/concrete-optimizer
