test(frontend): run circuit with Rust keygen

--- a/frontends/concrete-python/Makefile
+++ b/frontends/concrete-python/Makefile
@@ -61,9 +61,12 @@ licenses:
 tfhers-utils:
 	cd ${TFHERS_UTILS_DIRECTORY} && $(MAKE) build
 
+concrete-rust:
+	cd ../../tools/concrete-rust && cargo build --release
+
 pytest: pytest-default
 
-pytest-default: tfhers-utils
+pytest-default: tfhers-utils concrete-rust
 	eval $(shell make silent_cp_activate)
 	pytest tests -svv -n auto \
 		--cov=concrete.fhe \
@@ -77,7 +80,7 @@ pytest-macos:
 		--key-cache "${KEY_CACHE_DIRECTORY}" \
 		-m minimal
 
-pytest-single: tfhers-utils
+pytest-single: tfhers-utils concrete-rust
 	eval $(shell make silent_cp_activate)
 	# test single precision, mono params
 	pytest tests -svv -n auto \
@@ -86,7 +89,7 @@ pytest-single: tfhers-utils
 		--key-cache "${KEY_CACHE_DIRECTORY}" \
 		-m "${PYTEST_MARKERS}"
 
-pytest-multi: tfhers-utils
+pytest-multi: tfhers-utils concrete-rust
 	eval $(shell make silent_cp_activate)
 	# test multi precision, multi params
 	pytest tests -svv -n auto \
