dirty draft for andi

--- a/compilers/concrete-compiler/compiler/lib/Dialect/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/lib/Dialect/CMakeLists.txt
@@ -3,6 +3,7 @@ add_compile_options(-fexceptions -fsized-deallocation)
 add_subdirectory(FHELinalg)
 add_subdirectory(FHE)
 add_subdirectory(TFHE)
+add_subdirectory(GLWE)
 add_subdirectory(Concrete)
 add_subdirectory(RT)
 add_subdirectory(SDFG)
