--- a/compilers/concrete-compiler/compiler/lib/Support/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/lib/Support/CMakeLists.txt
@@ -18,6 +18,7 @@ add_mlir_library(
   LINK_LIBS
   PUBLIC
   FHELinalgDialect
+  GLWEDialect
   FHELinalgDialectTransforms
   FHETensorOpsToLinalg
   FHEDialectTransforms
