--- a/compilers/concrete-compiler/compiler/include/concretelang/Dialect/CMakeLists.txt
+++ b/compilers/concrete-compiler/compiler/include/concretelang/Dialect/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(FHE)
 add_subdirectory(FHELinalg)
 add_subdirectory(TFHE)
+add_subdirectory(GLWE)
 add_subdirectory(Concrete)
 add_subdirectory(RT)
 add_subdirectory(SDFG)
